Closed Bug 689948 Opened 14 years ago Closed 14 years ago

Fennec won't open again if minimized

Categories

(Firefox for Android Graveyard :: General, defect)

ARM
Android
defect
Not set
major

Tracking

(firefox9+ fixed)

VERIFIED FIXED
Firefox 9
Tracking Status
firefox9 + fixed

People

(Reporter: csuciu, Assigned: snorp)

References

Details

(Keywords: regression)

Attachments

(3 files)

Attached file aLog file —
Mozilla/5.0 (Android;Linux armv7l;rv:10.0a1)Gecko/20110928 Firefox/10.0a1 Fennec/10.0a1 Device: HTC Desire OS: Android 2.2. Steps: 1. Install and start Fennec nightly 2. Press the Home key to bring up Android main screen. 4. Tap on Nightly icon to open it again Expected: Nightly will open. Actual: Nothing happens for aprox. 5 seconds, then the screen turns black. Only the phone status strip is displayed. The black screen can be dismissed only by pressing the Home key. You'll have to kill Nightly and open it again in order to be able to use it. Occurs: Every time. Please see the attached log file.
If the black screen is not dismissed for aprox 10 minutes, Nightly will crash. Please see the "nightly crash" log file.
Attached file nightly crash —
I also see this on my Galaxy Tab, running Android 2.2 (froyo). I do not see it on my Nexus One, running Android 2.3.4 (gingerbread)
More data: This only appears to happen if the current tab is a "local" page. Meaning an about: page or some page that is not running in the child process.
I can reproduce this on a Droid Pro, running 2.2. Worryingly, pressing the home screen does not get out of the black screen state and I had to reboot the phone. Nothing interesting in logcat...
This is similar to a previously-fixed bug 664996.
My patch for bug 686992 seems to have caused this...taking
Assignee: nobody → snorp
Status: NEW → ASSIGNED
Blocks: 686992
Severity: normal → major
tracking-fennec: --- → ?
Accidentally removed a call to GeckoAppShell.scheduleRedraw() which caused a deadlock. Also, this fixes an issue with uninitialized member variables in AndroidBridge.
Attachment #563131 - Flags: review?(blassey.bugs)
Attachment #563131 - Flags: review?(blassey.bugs) → review+
Comment on attachment 563131 [details] [diff] [review] Bug 689948 - Fix regressions caused by bug 686992 Pushed to inbound: https://hg.mozilla.org/integration/mozilla-inbound/rev/ece3ae642585 Requesting approval-mozilla-aurora for Firefox 9. This fixes a very serious regression introduced in Firefox 9. The regression causes Firefox to deadlock reproducibly in common conditions on Android 2.2 and earlier. The patch is low-risk: It is Android-only, and it only re-orders some code to avoid using unitialized variables and restores a function call that was accidentally removed.
Attachment #563131 - Flags: approval-mozilla-aurora?
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Blocks: 690260
Target Milestone: --- → Firefox 10
Attachment #563131 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Target Milestone: Firefox 10 → Firefox 9
Retested bug with: Build ID: Mozilla/5.0 (Android;Linux armv7l;rv:10.0a1)Gecko/20110930 Firefox/10.0a1 Fennec/10.0a1 Device: Motorola DROID 2 OS: Android 2.3 and BUILD ID: Mozilla/5.0 (Android;Linux armv7l;rv:9.0a2)Gecko/20110930 Firefox/9.0a2 Fennec/9.0a2 Bug no longer reproducible. Fennec is opened without any issues after is minimized. Verifying bug.
Status: RESOLVED → VERIFIED
tracking-fennec: ? → ---
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: