Bug 689948 - Fix regressions caused by bug 686992

Accidentally removed a call to GeckoAppShell.scheduleRedraw() which
caused a deadlock.  Also, this fixes an issue with uninitialized
member variables in AndroidBridge.